<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragment_home">

    <fragment
        android:id="@+id/fragment_home"
        android:name="com.bunoza.procjenazaraze2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/fragment_covid"
        android:name="com.bunoza.procjenazaraze2.ui.covid.CovidFragment"
        android:label="@string/title_covid"
        tools:layout="@layout/fragment_covid" />

    <fragment
        android:id="@+id/fragment_location"
        android:name="com.bunoza.procjenazaraze2.ui.location.LocationFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_location" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.bunoza.procjenazaraze2.ui.preferences.SettingsFragment"
        android:label="Postavke" />
</navigation>